# revprez.github.io

./: .gitmodules  README.md  about.html  about.rst  archive.html  contact.html  index.html  keybase.txt  revprez-github-io.cabal  site.hs  stack.yaml
.circleci/: config.yml
.well-known/: brave-rewards-verification.txt
css/: default.css  lightbox.css
docs/: archive.html  index.html  keybase.txt
docs/css/: lightbox.css
docs/posts/: 2016-06-21-hello.html  2016-06-27-mdns-on-netbsd.html  2016-07-14-mdns-openindiana.html  2016-07-14-mdns-solaris.html  2017-09-09-local_unbound-on-freebsd-11.html
js/: lightbox-plus-jquery.js  lightbox-plus-jquery.min.js  lightbox.js  lightbox.min.js
posts/: 2015-06-21-hello.html  2016-06-21-avahi-conquered.html  2016-06-21-hello.html  2016-06-21-hello.markdown  2016-06-26-avahi-conquered.html  2016-06-26-avahi-conquered.markdown  2016-06-27-mdns-on-netbsd.html  2016-06-27-mdns-on-netbsd.markdown  2016-07-13-free-internet.html  2016-07-13-free-internet.markdown  2016-07-14-mdns-openindiana.html  2016-07-14-mdns-openindiana.markdown  2016-07-14-mdns-solaris.html  2016-07-14-mdns-solaris.markdown  2017-09-09-local_unbound-on-freebsd-11.html  2017-09-09-local_unbound-on-freebsd-11.markdown
templates/: archive.html  default.html  post.html
